@@ -4451,7 +4451,7 @@
     ],
     "iconIndex": 474,
     "name": "Hermes Boots",
-    "note": "<Upgrade Slots: 2>\n\n<Synthesis Ingredients>\nSpeedster Boots\nFeral Bat Wing: 10\nWind Essence: 15\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Ridiculously Fast Footwear>\n<Synthesis SE: Equip3>",
+    "note": "<Upgrade Slots: 2>\n\n<Synthesis Ingredients>\nSpeedster Boots\nWind Catalyst\nFeral Bat Wing: 10\nWind Essence: 15\nTellurium Alloy\n</Synthesis Ingredients>\n<Mask Name: Ridiculously Fast Footwear>\n<Synthesis SE: Equip3>",
     "params": [
       0,
       0,
