@@ -6516,5 +6516,31 @@
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
+  },
+  {
+    "id": 225,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "Material used to craft the \\ia[168].",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 575,
+    "itypeId": 1,
+    "name": "Wind Catalyst",
+    "note": "<Menu Category: Drops, Materials>",
+    "occasion": 3,
+    "price": 500,
+    "repeats": 1,
+    "scope": 0,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
   }
 ]
