@@ -48,7 +48,7 @@ Additions:
    > Dark Orb
    > Ice II
    > Wyvern's Fury
- - Added 73 new items:
+ - Added 74 new items:
   ~ 11 recovery/buff items:
    > Large Potion
    > Large Elixir
@@ -61,7 +61,7 @@ Additions:
    > Dispel Potion
    > Stimulant
    > Vicious Root
-  ~ 27 materials:
+  ~ 28 materials:
    > Malicious Essence
    > Shadowspec Ingot
    > Blank Tome
@@ -77,6 +77,7 @@ Additions:
    > Petrified Wood
    > Dragon Scale
    > Enchanted Dragon Scale
+   > Wind Catalyst
    > Icy Gel
    > Ice Cube
    > Frozen Core
